[gd_scene load_steps=47 format=2]

[ext_resource path="res://assets/Scripts/UI/Rating.gd" type="Script" id=1]
[ext_resource path="res://pxArt.png" type="Texture" id=2]
[ext_resource path="res://assets/img/UI/blasto/cornice barra vita.png" type="Texture" id=3]
[ext_resource path="res://assets/img/UI/you win cornice.png" type="Texture" id=4]
[ext_resource path="res://assets/img/UI/bosses/the gun/the gun cornice destra.png" type="Texture" id=5]
[ext_resource path="res://assets/img/UI/game over cornice.png" type="Texture" id=6]
[ext_resource path="res://assets/img/UI/rating/S.png" type="Texture" id=7]
[ext_resource path="res://assets/img/UI/rating/A.png" type="Texture" id=8]
[ext_resource path="res://assets/img/UI/blasto/icona numero vite.png" type="Texture" id=10]
[ext_resource path="res://assets/img/UI/bosses/the gun/barra vita the gun.png" type="Texture" id=11]
[ext_resource path="res://assets/img/UI/rating/B.png" type="Texture" id=12]
[ext_resource path="res://assets/img/UI/rating/C.png" type="Texture" id=13]
[ext_resource path="res://assets/img/UI/blasto/barra vita.png" type="Texture" id=14]
[ext_resource path="res://assets/Scripts/UI/OptionMenu.gd" type="Script" id=15]
[ext_resource path="res://assets/Scripts/FloorCreator.gd" type="Script" id=16]
[ext_resource path="res://assets/Scripts/Player/camera/CameraShake.gd" type="Script" id=17]
[ext_resource path="res://assets/Scripts/Managers/ost.gd" type="Script" id=18]
[ext_resource path="res://assets/Scripts/UI/PlayerHealthBar.gd" type="Script" id=19]
[ext_resource path="res://scenes/pg/bosses/asariBoss.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/Scripts/Player/camera/cameraController.gd" type="Script" id=21]
[ext_resource path="res://assets/Scripts/UI/HealthDisplay.gd" type="Script" id=22]
[ext_resource path="res://assets/img/sprites/obj/wind.png" type="Texture" id=23]
[ext_resource path="res://assets/audio/ost/lvls station/The Gun soundtrack.ogg" type="AudioStream" id=24]
[ext_resource path="res://assets/img/background/desert/Desert1.png" type="Texture" id=25]
[ext_resource path="res://assets/fonts/MainMenuFont.tres" type="DynamicFont" id=27]
[ext_resource path="res://scenes/tile/station/lvl 3 s/station3TileBoss.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/pg/Blasto.tscn" type="PackedScene" id=31]

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0, 0.72549, 0.164706, 1 )
border_width_top = 18
border_width_bottom = 23
border_color = Color( 0.839216, 0, 1, 1 )
shadow_color = Color( 1, 0.6, 0.6, 0.6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15748, 123.529 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1990.15, 120.176 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 23 )
region = Rect2( 199, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 23 )
region = Rect2( 398, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 23 )
region = Rect2( 597, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 23 )
region = Rect2( 796, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 23 )
region = Rect2( 995, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 23 )
region = Rect2( 1194, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 23 )
region = Rect2( 1393, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 23 )
region = Rect2( 1592, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 23 )
region = Rect2( 1791, 0, 199, 114 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 23 )
region = Rect2( 1990, 0, 199, 114 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="testing" type="Node2D"]
position = Vector2( 63, -456 )
__meta__ = {
"_edit_horizontal_guides_": [ 1020.87 ]
}

[node name="StageManager" type="Node2D" parent="."]
position = Vector2( -680, -496 )

[node name="EnemiesContainer" type="Node" parent="StageManager"]

[node name="asariBoss" parent="StageManager/EnemiesContainer" instance=ExtResource( 20 )]
position = Vector2( 768, 824 )
HealthBarName = "GUI/UI/HealthBossContainer1"

[node name="asariBoss2" parent="StageManager/EnemiesContainer" instance=ExtResource( 20 )]
position = Vector2( 592, 870 )
HealthBarName = "GUI/UI/HealthBossContainer2"

[node name="respawnPoint" type="Node2D" parent="StageManager"]
position = Vector2( 791, 1852 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GAME OVER" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 958.351, 539.915 )
scale = Vector2( 1.00097, 1.00097 )
z_index = 1
texture = ExtResource( 6 )

[node name="WIN" type="Sprite" parent="GUI/UI"]
visible = false
position = Vector2( 963.059, 541.221 )
z_index = 1
texture = ExtResource( 4 )

[node name="LifesList" type="Node2D" parent="GUI/UI"]

[node name="Blasto" type="Node2D" parent="GUI/UI/LifesList"]

[node name="Ceru1" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 235, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Ceru2" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 204, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="Ceru3" type="Sprite" parent="GUI/UI/LifesList/Blasto"]
position = Vector2( 172, 140 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="HealthPlayerContainer" type="Node2D" parent="GUI/UI"]
script = ExtResource( 19 )

[node name="Blasto" type="Node2D" parent="GUI/UI/HealthPlayerContainer"]

[node name="ConiceBarraVita" type="Sprite" parent="GUI/UI/HealthPlayerContainer/Blasto"]
position = Vector2( 293.239, 82.7536 )
scale = Vector2( 0.295394, 0.289558 )
texture = ExtResource( 3 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthPlayerContainer/Blasto"]
margin_left = 146.0
margin_top = 57.0
margin_right = 1507.0
margin_bottom = 232.0
rect_scale = Vector2( 0.293, 0.296 )
max_value = 10.0
value = 10.0
texture_progress = ExtResource( 14 )

[node name="HealthBossContainer1" type="Node2D" parent="GUI/UI"]
position = Vector2( 1926, 968 )
script = ExtResource( 22 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthBossContainer1"]
margin_left = -1085.0
margin_top = -26.0
margin_right = -89.0
margin_bottom = 60.0
max_value = 20.0
value = 20.0
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="TheJaw" type="Sprite" parent="GUI/UI/HealthBossContainer1"]
position = Vector2( -581.76, 20.7754 )
scale = Vector2( 0.664756, 0.595638 )
texture = ExtResource( 5 )

[node name="HealthBossContainer2" type="Node2D" parent="GUI/UI"]
position = Vector2( 830, 970 )
script = ExtResource( 22 )

[node name="HealthBar" type="TextureProgress" parent="GUI/UI/HealthBossContainer2"]
margin_left = -1085.0
margin_top = -26.0
margin_right = -89.0
margin_bottom = 60.0
max_value = 20.0
value = 20.0
texture_progress = ExtResource( 11 )
nine_patch_stretch = true

[node name="TheJaw" type="Sprite" parent="GUI/UI/HealthBossContainer2"]
position = Vector2( -581.76, 20.7754 )
scale = Vector2( 0.664756, 0.595638 )
texture = ExtResource( 5 )

[node name="Rating" type="Control" parent="GUI/UI"]
margin_left = 1764.0
margin_top = 954.0
margin_right = 1804.0
margin_bottom = 994.0
script = ExtResource( 1 )
rate_list = [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ) ]
boss = true
rate_points = [ 3600, 7200, 10800, 14400 ]

[node name="Sprite" type="Sprite" parent="GUI/UI/Rating"]
visible = false
scale = Vector2( 0.520833, 0.520833 )
z_index = 1
texture = ExtResource( 8 )

[node name="pauseMenu" type="Control" parent="GUI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )

[node name="mainPauseMenu" type="Control" parent="GUI/pauseMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ReturnBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 895.843
margin_top = 370.715
margin_right = 1080.84
margin_bottom = 455.715
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "RETURN"

[node name="RestartLevelBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 803.0
margin_top = 462.0
margin_right = 1164.0
margin_bottom = 547.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "RESTART LEVEL"

[node name="OptionBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 886.404
margin_top = 551.0
margin_right = 1082.4
margin_bottom = 636.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "OPTIONS"

[node name="MainMenuBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 634.061
margin_right = 1123.87
margin_bottom = 719.061
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.811765, 0.235294, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "MAIN MENU"

[node name="QuitBtn" type="Button" parent="GUI/pauseMenu/mainPauseMenu"]
margin_left = 844.873
margin_top = 723.0
margin_right = 1123.87
margin_bottom = 808.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 41 )
custom_styles/normal = SubResource( 42 )
action_mode = 0
text = "QUIT"

[node name="OptionMenu" type="Control" parent="GUI/pauseMenu"]
visible = false
margin_left = -4.48981
margin_top = -204.288
margin_right = 35.5102
margin_bottom = -164.288

[node name="backToPauseBtn" type="Button" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 1003.0
margin_top = 555.0
margin_right = 1337.0
margin_bottom = 651.0
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
custom_styles/hover = SubResource( 36 )
custom_styles/normal = SubResource( 37 )
action_mode = 0
text = "BACK"

[node name="checkFullscreen" type="CheckBox" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 554.0
margin_right = 819.0
margin_bottom = 651.0
mouse_filter = 1
custom_colors/font_color_disabled = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0.72549, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0, 0.72549, 0.164706, 1 )
custom_fonts/font = ExtResource( 27 )
text = "FullScreen"

[node name="music" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 675.0
margin_right = 721.0
margin_bottom = 765.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 27 )
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 732.461
margin_right = 1339.55
margin_bottom = 855.459
custom_styles/slider = SubResource( 38 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="sfx" type="Label" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 879.0
margin_right = 753.0
margin_bottom = 969.0
custom_colors/font_color = Color( 0.682353, 0, 0.901961, 1 )
custom_fonts/font = ExtResource( 27 )
text = "EFFECTS"

[node name="SFXSlider" type="HSlider" parent="GUI/pauseMenu/OptionMenu"]
margin_left = 561.0
margin_top = 930.0
margin_right = 1339.55
margin_bottom = 1053.0
custom_styles/slider = SubResource( 38 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="border" type="Node" parent="."]

[node name="Top" type="StaticBody2D" parent="border"]
position = Vector2( 132.312, 444.188 )
scale = Vector2( 0.58, 0.57 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Top"]
position = Vector2( 15525.4, 415.184 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="border/Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Top/Area2D"]
position = Vector2( 15525.4, 415.184 )
shape = SubResource( 6 )

[node name="Left" type="StaticBody2D" parent="border"]
position = Vector2( 386.667, 11.83 )
rotation = 1.5708
scale = Vector2( 0.57, 0.58 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Left"]
position = Vector2( 870.27, 780.269 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="border/Left"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Left/Area2D"]
position = Vector2( 870.27, 780.269 )
shape = SubResource( 7 )

[node name="Right" type="StaticBody2D" parent="border"]
position = Vector2( 1932.8, 13.7178 )
rotation = 1.5708
scale = Vector2( 0.57, 0.58 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Right"]
position = Vector2( 870.135, 1606.41 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="border/Right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Right/Area2D"]
position = Vector2( 870.135, 1606.41 )
shape = SubResource( 7 )

[node name="Bottom" type="StaticBody2D" parent="border"]
position = Vector2( 3.17841, 556.951 )
scale = Vector2( 0.58, 0.57 )
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Bottom"]
position = Vector2( 14914.6, 812.236 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="border/Bottom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="border/Bottom/Area2D"]
position = Vector2( 14915.3, 810.945 )
shape = SubResource( 6 )

[node name="floor" type="Node2D" parent="."]
position = Vector2( -2238, 510 )
z_index = -2
script = ExtResource( 16 )
increment = 1564
n_positions = 1
scenes = [ ExtResource( 29 ) ]

[node name="PlayersList" type="Node2D" parent="."]
position = Vector2( 0, -126 )

[node name="Blasto" parent="PlayersList" instance=ExtResource( 31 )]
position = Vector2( 44, 1360 )
scale = Vector2( 1, 1 )
boss = true

[node name="ost" type="AudioStreamPlayer" parent="." groups=["pausable"]]
pause_mode = 2
stream = ExtResource( 24 )
bus = "Music"
script = ExtResource( 18 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
visible = false

[node name="background" type="Node" parent="ParallaxBackground"]

[node name="desert1" type="Sprite" parent="ParallaxBackground/background"]
position = Vector2( 1288, 360 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 25 )

[node name="desert2" type="Sprite" parent="ParallaxBackground/background"]
position = Vector2( 120, 352 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 25 )

[node name="background2" type="Node" parent="ParallaxBackground"]

[node name="pxArt" type="Sprite" parent="ParallaxBackground/background2"]
position = Vector2( 368, 352 )
scale = Vector2( 0.726563, 0.726563 )
texture = ExtResource( 2 )

[node name="pxArt2" type="Sprite" parent="ParallaxBackground/background2"]
position = Vector2( 1104, 352 )
scale = Vector2( 0.726563, 0.796875 )
texture = ExtResource( 2 )

[node name="pxArt3" type="Sprite" parent="ParallaxBackground/background2"]
position = Vector2( 1848, 348 )
scale = Vector2( 0.726563, 0.820313 )
texture = ExtResource( 2 )
flip_h = true

[node name="obj" type="Node" parent="ParallaxBackground"]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 1368.43, 522.308 )
scale = Vector2( 0.812395, 0.784622 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 588.103, 50.5414 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 1644.18, 125.905 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 294.987, 271.825 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 564.379, 635.503 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite6" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 1799.08, 696.116 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="AnimatedSprite7" type="AnimatedSprite" parent="ParallaxBackground/obj"]
position = Vector2( 1022.34, 361.622 )
scale = Vector2( 0.901329, 0.885789 )
frames = SubResource( 39 )
frame = 1
playing = true

[node name="obj" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 329, 1208 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 379
limit_bottom = 1020
limit_smoothed = true
drag_margin_h_enabled = true
smoothing_enabled = true
drag_margin_left = 0.11
drag_margin_right = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 21 )
__meta__ = {
"_editor_description_": ""
}

[node name="shake" type="Node2D" parent="Camera2D"]
script = ExtResource( 17 )
boss = true
randomShackeStrenght = 10.0

[connection signal="CallSprint" from="StageManager/EnemiesContainer/asariBoss" to="StageManager/EnemiesContainer/asariBoss2" method="_on_asariBoss_CallSprint"]
[connection signal="CallSprint" from="StageManager/EnemiesContainer/asariBoss2" to="StageManager/EnemiesContainer/asariBoss" method="_on_asariBoss2_CallSprint"]
[connection signal="value_changed" from="GUI/UI/HealthPlayerContainer/Blasto/HealthBar" to="PlayersList/Blasto" method="_on_HealthBar_value_changed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/ReturnBtn" to="GUI/pauseMenu" method="_on_ReturnBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/RestartLevelBtn" to="GUI/pauseMenu" method="_on_RestartLevelBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/OptionBtn" to="GUI/pauseMenu" method="_on_OptionBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/MainMenuBtn" to="GUI/pauseMenu" method="_on_MainMenuBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/mainPauseMenu/QuitBtn" to="GUI/pauseMenu" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="GUI/pauseMenu/OptionMenu/backToPauseBtn" to="GUI/pauseMenu" method="_on_backToPauseBtn_pressed"]
[connection signal="toggled" from="GUI/pauseMenu/OptionMenu/checkFullscreen" to="GUI/pauseMenu" method="_on_checkFullscreen_toggled"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/MusicSlider" to="GUI/pauseMenu" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="GUI/pauseMenu/OptionMenu/SFXSlider" to="GUI/pauseMenu" method="_on_SFXSlider_value_changed"]
[connection signal="death" from="PlayersList/Blasto" to="StageManager" method="_on_Blasto_death"]
[connection signal="update_healthbar" from="PlayersList/Blasto" to="GUI/UI/HealthPlayerContainer" method="_on_Blasto_update_healthbar"]
